<resources>
    <string name="app_name">KComplete</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fuel_registration_activity_title">Fuel registration</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">Pick time</string>
    <string name="edit_euroPerLitre">Price per litre (€/l)</string>
    <string name="edit_totKm">Tot km</string>
    <string name="edit_totCost">Total cost (€)</string>
    <string name="edit_litres">Total litres (l)</string>
    <string name="edit_position">Position</string>
    <string name="edit_note">Note</string>
    <string name="button_help">H</string>
    <string name="text_manual">Nel mezzo del cammin di nostra vita\nmi ritrovai per una selva oscura\nché la diritta via era smarrita.\nAhi quanto a dir qual era è cosa dura\nesta selva selvaggia e aspra e forte\nche nel pensier rinova la paura!\nTant’è amara che poco è più morte;\nma per trattar del ben ch’i’ vi trovai,\ndirò de l’altre cose ch’i’ v’ho scorte.\nIo non so ben ridir com’i’ v’intrai,\ntant’era pien di sonno a quel punto\nche la verace via abbandonai</string>
    <string name="mnu">Menu item</string>
    <string name="today">today</string>
    <string name="last30Days">Last 30 days</string>
    <string name="last90Days">Last 90 days</string>
    <string name="manageCars">Your cars</string>
    <string name="choose_a_type">Choose a type</string>
    <string name="fuel_registration_title">Fuel Registration</string>
</resources>
